--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,21 @@ repositories {
 dependencies {
     compile group: 'net.java.dev.jna', name: 'jna', version: '4.0.0'
     compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.13'
+
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+
 }
 
 sourceSets {
     main {
         java {
             srcDir 'lib/purejavacomm/src'
+        }
+    }
+
+    test {
+        java {
+            srcDirs =  ['src/test/java']
         }
     }
 }
