Update PureJava serial port test to test RX and TX.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".\\lib\\purejavacomm"]
 	path = .\\lib\\purejavacomm
 	url = https://github.com/reapzor/purejavacomm
+[submodule ".\\lib\\JavaHelpers"]
+	path = .\\lib\\JavaHelpers
+	url = https://github.com/reapzor/JavaHelpers
