--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.13'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'com.jayway.awaitility', name: 'awaitility', version: '1.7.0'
 
 }
 
