--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile group: 'net.java.dev.jna', name: 'jna', version: '4.0.0'
     compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.13'
+    compile group: 'net.jodah', name: 'typetools', version: '0.4.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'com.jayway.awaitility', name: 'awaitility', version: '1.7.0'
