--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,6 @@
-group 'com.bortbort.arduino'
-version '1.0-SNAPSHOT'
-
 apply plugin: 'java'
-apply plugin: 'application'
-
-sourceCompatibility = 1.8
-mainClassName = ''
+apply plugin: 'maven'
+apply plugin: 'signing'
 
 repositories {
     mavenCentral()
@@ -18,8 +13,14 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'com.jayway.awaitility', name: 'awaitility', version: '1.7.0'
-
 }
+
+group 'com.bortbort.arduino'
+archivesBaseName = "filo-firmata"
+version '0.1.0-SNAPSHOT'
+sourceCompatibility = 1.8
+
+
 
 sourceSets {
     main {
@@ -28,16 +29,70 @@ sourceSets {
             srcDir 'lib/JavaHelpers/src/main/java'
         }
     }
-
-    test {
-        java {
-            srcDirs =  ['src/test/java']
-        }
-    }
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'SerialTest'
-    }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:deprecation'
 }
+
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+
+signing {
+    required { gradle.taskGraph.hasTask("uploadArchives") }
+    sign configurations.archives
+}
+
+//uploadArchives {
+//    repositories {
+//        mavenDeployer {
+//            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+//
+//            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+//                authentication(userName: sonatypeUsername, password: sonatypePassword)
+//            }
+//
+//            pom.project {
+//                name 'FiloFirmata'
+//                packaging 'jar'
+//                description 'FiloFirmata is a client library for the Firmata protocol used with hardware project boards.'
+//                url 'https://github.com/reapzor/FiloFirmata'
+//
+//                scm {
+//                    url 'scm:git@github.com:reapzor/FiloFirmata.git'
+//                    connection 'scm:git@github.com:reapzor/FiloFirmata.git'
+//                    developerConnection 'scm:git@github.com:reapzor/FiloFirmata.git'
+//                }
+//
+//                licenses {
+//                    license {
+//                        name 'The MIT License (MIT)'
+//                        url 'https://github.com/reapzor/FiloFirmata/blob/master/LICENSE'
+//                        distribution 'repo'
+//                    }
+//                }
+//
+//                developers {
+//                    developer {
+//                        id 'reapzor'
+//                        name 'Chuck Benson'
+//                    }
+//                }
+//            }
+//        }
+//    }
+//}
