--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ repositories {
 
 dependencies {
     compile group: 'net.java.dev.jna', name: 'jna', version: '4.0.0'
-    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.13'
-    //compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.13'
+    //compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.13'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.13'
     compile group: 'net.jodah', name: 'typetools', version: '0.4.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
@@ -19,7 +19,7 @@ dependencies {
 
 group 'com.bortbort.arduino'
 archivesBaseName = "filo-firmata"
-version '0.1.0'
+version '0.1.1'
 sourceCompatibility = 1.8
 
 
