--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 
 group 'com.bortbort.arduino'
 archivesBaseName = "filo-firmata"
-version '0.1.8-SNAPSHOT'
+version '0.1.8'
 sourceCompatibility = 1.8
 
 
