--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     //compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.13'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.13'
     compile group: 'net.jodah', name: 'typetools', version: '0.4.4'
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'com.jayway.awaitility', name: 'awaitility', version: '1.7.0'
