--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
 group 'com.bortbort.arduino'
 archivesBaseName = "filo-firmata"
-version '0.1.10'
+version '0.1.11-SNAPSHOT'
 sourceCompatibility = 1.8
 
 
